@@ -1,4 +1,5 @@
 Version 1.6.6
+- CHG: Reduced disk access in the status cache. (Stefan)
 - BUG: The /url parameter was ignored for import commands. (Stefan)
 - BUG: Some project properites were not automatically added
        to newly added folders. (Stefan)
